Fix the alignment of the footer so that it is responsive

--- a/_patterns/footer/footer.css
+++ b/_patterns/footer/footer.css
@@ -18,7 +18,11 @@ footer {
   color: var(--color-secondary-light-blue);
 }
 
-.insta, .facebook, .behance {
+footer .insta, footer .facebook, footer .behance {
+  color: var(--color-primary-blue);
+}
+
+.social a {
   color: var(--color-primary-blue);
 }
 
